--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,15 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-pymilvus==2.3.5
-openai==1.10.0
-python-dotenv==1.0.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
-httpx==0.26.0
-python-multipart==0.0.6
-pdfplumber==0.10.3
-python-docx==1.1.0
-sentence-transformers==2.3.1
-numpy==1.26.3
-pandas==2.2.0
-scikit-learn==1.4.0
-python-jose==3.3.0
-passlib==1.7.4
-bcrypt==4.1.2
+fastapi>=0.109.0
+uvicorn>=0.27.0
+pymilvus>=2.3.0
+openai>=1.10.0
+python-dotenv>=1.0.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+httpx>=0.26.0
+python-multipart>=0.0.6
+pdfplumber>=0.10.0
+python-docx>=1.1.0
+sentence-transformers>=2.3.0
+python-jose>=3.3.0
+passlib>=1.7.4
+bcrypt>=4.1.0
