Enhance .env.example with comprehensive documentation
- Add OpenRouter API key configuration
- Add clear section headers for better organization
- Document Docker vs local development host settings
- Add embedding model options with explanations
- Clarify that system works without API keys
- Add comments about fallback modes
- Improve readability with spacing and organization

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,18 +1,35 @@
-# OpenAI API Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# ===========================================
+# PolicyLens Configuration Template
+# ===========================================
+# Copy this file to .env and fill in your values
+# System works without API keys using local models
 
-# Milvus Configuration
+# API Keys (Optional - system works without these)
+# ================================================
+OPENAI_API_KEY=sk-your_openai_api_key_here
+OPENROUTER_API_KEY=sk-or-v1-your_openrouter_key_here
+
+# Milvus Vector Database Configuration
+# =====================================
 MILVUS_HOST=localhost
 MILVUS_PORT=19530
+# For Docker: Use 'milvus' as host when running in containers
+# For Local: Use 'localhost' when running backend locally
 
-# Embedding Model
-EMBEDDING_MODEL=text-embedding-3-large
-# Alternative: all-MiniLM-L6-v2 for local embeddings
+# Embedding Model Configuration
+# ==============================
+EMBEDDING_MODEL=all-MiniLM-L6-v2
+# Options:
+# - all-MiniLM-L6-v2 (local, free, 384 dimensions)
+# - text-embedding-3-small (OpenAI, requires API key)
+# - text-embedding-3-large (OpenAI, requires API key)
 
 # LLM Configuration
+# =================
 LLM_MODEL=gpt-4-turbo-preview
 LLM_TEMPERATURE=0.1
 MAX_TOKENS=2000
+# Fallback: System uses rule-based analysis if no API key
 
 # Application Configuration
 API_PORT=8000
