--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,7 @@ python-jose>=3.3.0
 passlib>=1.7.4
 bcrypt>=4.1.0
 reportlab>=4.0.0
+beautifulsoup4>=4.12.0
+lxml>=5.0.0
+requests>=2.31.0
+APScheduler>=3.10.0
