Clean up repository - remove test files and unnecessary documentation
- Removed test files: test_*.py, test_*.json, test-*.html, test-*.ps1
- Removed debug files: debug-api.html
- Removed unnecessary documentation: DEMO_STATUS.md, IMPLEMENTATION_UPDATE.md, MILVUS_*.md, plan.md
- Removed sample/test scripts from backend
- Removed root package.json (not needed, frontend has its own)
- Updated .gitignore with comprehensive exclusions
- Cleaned up Python cache and dist directories

--- a/.gitignore
+++ b/.gitignore
@@ -4,42 +4,45 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
 venv/
+env/
 ENV/
-.venv
+dist/
+build/
+*.egg-info/
 
-# Environment
-.env
-.env.local
+# Node
+node_modules/
+npm-debug.log
+yarn-error.log
 
-# IDE
+# IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Logs
-*.log
-logs/
+# Environment
+.env
+!.env.example
 
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
+# Test files
+test_*.py
+test_*.json
+test-*.html
+test-*.ps1
+debug-*.html
 
-# Distribution
-dist/
-build/
-*.egg-info/
+# Documentation (keep README)
+DEMO_*.md
+IMPLEMENTATION_*.md
+MILVUS_*.md
+plan.md
 
-# Runtime data
-backend/data/metrics.json
-backend/data/decisions/
-backend/data/policies/
+# Data directories
+backend/data/decisions/*.json
+backend/data/feedback/*.json
